# eventlog-live-infra

./: .gitignore  README.md  docker-compose.yml  eventlog-live.Dockerfile
example/: Main.hs  README.md  cabal.project  example.cabal  hie.yaml
