cabal-version:      3.4
name:               example
version:            0.1.0
author:             Finley McIlwaine
maintainer:         finley@well-typed.com
build-type:         Simple

executable example
    default-language: Haskell2010
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0
      , random
      , eventlog-socket
    hs-source-dirs:
        .
    ghc-options:
        -Wall
        -Wunused-packages
        -threaded
        -eventlog
        -rtsopts
